--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cookie": "^1.1.1",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.0.0",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
